Fix misaligned button

--- a/gui/css/global.css
+++ b/gui/css/global.css
@@ -90,7 +90,7 @@
         padding: 6px 10px;
     }
     .main-search button[type="submit"] {
-        padding: 7px 14px;
+        padding: 6px 14px;
     }
     .main-search button[type="submit"] .glyph:before {
         font-size: 1.2143em;
